# epub-translator

./: .env.example  .gitignore  README.md  USAGE.md  check_last_run.sh  pyproject.toml  run_translation.sh  translation-context.txt
src/epub_fa_translator/: __init__.py  main.py
